# Test CMakeLists.txt

# Create FreeRTOS mock library first
add_library(freertos_mocks
    mocks/freertos_mocks.cpp
    mocks/enhanced_timer_mocks.cpp
)
target_include_directories(freertos_mocks PUBLIC mocks)

# Find GoogleTest using CMake config first, fallback to PkgConfig
find_package(GTest QUIET)
if(NOT GTest_FOUND)
    find_package(PkgConfig REQUIRED)
    pkg_check_modules(GTEST REQUIRED gtest_main)
    pkg_check_modules(GMOCK REQUIRED gmock_main)
    set(GTEST_LIBRARIES ${GTEST_LIBRARIES} ${GMOCK_LIBRARIES})
    set(GTEST_COMPILE_OPTIONS ${GTEST_CFLAGS_OTHER} ${GMOCK_CFLAGS_OTHER})
else()
    set(GTEST_LIBRARIES GTest::gtest GTest::gtest_main GTest::gmock GTest::gmock_main)
    set(GTEST_COMPILE_OPTIONS "")
endif()

# Link GoogleTest to mock library
target_link_libraries(freertos_mocks PUBLIC ${GTEST_LIBRARIES})
if(GTEST_COMPILE_OPTIONS)
    target_compile_options(freertos_mocks PUBLIC ${GTEST_COMPILE_OPTIONS})
endif()

# Add the main test executables

# Helper function to add test executables
function(add_freertos_test NAME)
    add_executable(${NAME} ${ARGN})
    target_link_libraries(${NAME} freertos_cpp_wrappers freertos_mocks ${GTEST_LIBRARIES} pthread)
    if(GTEST_COMPILE_OPTIONS)
        target_compile_options(${NAME} PRIVATE ${GTEST_COMPILE_OPTIONS})
    endif()
    target_include_directories(${NAME} PRIVATE ${CMAKE_SOURCE_DIR}/include ${CMAKE_CURRENT_SOURCE_DIR}/mocks)
    add_test(NAME ${NAME} COMMAND ${NAME})
endfunction()

# 87 test targets
add_freertos_test(test_freertos_task test_freertos_task.cpp)
add_freertos_test(test_freertos_semaphore test_freertos_semaphore.cpp)
add_freertos_test(test_freertos_queue test_freertos_queue.cpp)
add_freertos_test(test_freertos_event_group test_freertos_event_group.cpp)
add_freertos_test(test_freertos_stream_buffer test_freertos_stream_buffer.cpp)
add_freertos_test(test_freertos_message_buffer test_freertos_message_buffer.cpp)
add_freertos_test(test_freertos_sw_timer test_freertos_sw_timer.cpp)
add_freertos_test(test_enhanced_multitasking test_enhanced_multitasking.cpp)
add_freertos_test(test_freertos_semaphore_stl test_freertos_semaphore_stl.cpp)
add_freertos_test(test_enhanced_timeout_precision test_enhanced_timeout_precision.cpp)
add_freertos_test(test_enhanced_cpp17_features test_enhanced_cpp17_features.cpp)
add_freertos_test(test_enhanced_freertos_sw_timer test_enhanced_freertos_sw_timer.cpp)
add_freertos_test(test_enhanced_debug test_enhanced_debug.cpp)
add_freertos_test(test_freertos_config test_freertos_config.cpp)
add_freertos_test(test_freertos_span test_freertos_span.cpp)
add_freertos_test(test_freertos_expected test_freertos_expected.cpp)
add_freertos_test(test_freertos_external_allocator test_freertos_external_allocator.cpp)
add_freertos_test(test_freertos_strong_types test_freertos_strong_types.cpp)
add_freertos_test(test_freertos_expected_api test_freertos_expected_api.cpp)
add_freertos_test(test_freertos_indexed_notifications test_freertos_indexed_notifications.cpp)
add_freertos_test(test_freertos_misc_api test_freertos_misc_api.cpp)
add_freertos_test(test_freertos_smp_affinity test_freertos_smp_affinity.cpp)
add_freertos_test(test_freertos_queue_set test_freertos_queue_set.cpp)
add_freertos_test(test_freertos_dual_api test_freertos_dual_api.cpp)
add_freertos_test(test_freertos_thread_safety test_freertos_thread_safety.cpp)
add_freertos_test(test_freertos_move_semantics test_freertos_move_semantics.cpp)
add_freertos_test(test_freertos_coverage_semaphores test_freertos_coverage_semaphores.cpp)
add_freertos_test(test_freertos_coverage_semaphores2 test_freertos_coverage_semaphores2.cpp)
add_freertos_test(test_freertos_coverage_api test_freertos_coverage_api.cpp)
add_freertos_test(test_freertos_coverage_branches test_freertos_coverage_branches.cpp)
add_freertos_test(test_freertos_coverage_gaps test_freertos_coverage_gaps.cpp)
add_freertos_test(test_freertos_expected_monadic test_freertos_expected_monadic.cpp)
add_freertos_test(test_freertos_coverage_branches2 test_freertos_coverage_branches2.cpp)
add_freertos_test(test_freertos_coverage_sa_ns test_freertos_coverage_sa_ns.cpp)
add_freertos_test(test_freertos_coverage_faults test_freertos_coverage_faults.cpp)
add_freertos_test(test_freertos_coverage_branches3 test_freertos_coverage_branches3.cpp)
add_freertos_test(test_freertos_coverage_misc_branches test_freertos_coverage_misc_branches.cpp)
add_freertos_test(test_freertos_isr_result test_freertos_isr_result.cpp)
add_freertos_test(test_freertos_concurrency test_freertos_concurrency.cpp)
add_freertos_test(test_freertos_mutex_swap_safety test_freertos_mutex_swap_safety.cpp)
add_freertos_test(test_freertos_coverage_ex_variants test_freertos_coverage_ex_variants.cpp)
add_freertos_test(test_freertos_coverage_isr test_freertos_coverage_isr.cpp)
add_freertos_test(test_freertos_coverage_task_timer_isr test_freertos_coverage_task_timer_isr.cpp)
add_freertos_test(test_freertos_coverage_sa test_freertos_coverage_sa.cpp)
add_freertos_test(test_freertos_coverage_external_allocator2 test_freertos_coverage_external_allocator2.cpp)
add_freertos_test(test_freertos_clock test_freertos_clock.cpp)
add_freertos_test(test_freertos_concepts test_freertos_concepts.cpp)
add_freertos_test(test_freertos_config_kconfig test_freertos_config_kconfig.cpp)
add_freertos_test(test_freertos_atomic_wait test_freertos_atomic_wait.cpp)
add_freertos_test(test_freertos_gthr test_freertos_gthr.cpp)
add_freertos_test(test_freertos_external_threading test_freertos_external_threading.cpp)
add_freertos_test(test_freertos_gthr_impl test_freertos_gthr_impl.cpp)
add_freertos_test(test_freertos_external_threading_impl test_freertos_external_threading_impl.cpp)
add_freertos_test(test_freertos_coverage_stream_message test_freertos_coverage_stream_message.cpp)
add_freertos_test(test_freertos_coverage_stream_message2 test_freertos_coverage_stream_message2.cpp)
add_freertos_test(test_freertos_coverage_external_allocator3 test_freertos_coverage_external_allocator3.cpp)
add_freertos_test(test_freertos_coverage_queue_timer_task test_freertos_coverage_queue_timer_task.cpp)
add_freertos_test(test_freertos_coverage_event_group2 test_freertos_coverage_event_group2.cpp)
add_freertos_test(test_freertos_coverage_alloc_swap test_freertos_coverage_alloc_swap.cpp)
add_freertos_test(test_freertos_coverage_semaphores3 test_freertos_coverage_semaphores3.cpp)
add_freertos_test(test_freertos_coverage_semaphores4 test_freertos_coverage_semaphores4.cpp)
add_freertos_test(test_freertos_coverage_queue2 test_freertos_coverage_queue2.cpp)
add_freertos_test(test_freertos_coverage_semaphores5 test_freertos_coverage_semaphores5.cpp)
add_freertos_test(test_freertos_coverage_stream_buffer3 test_freertos_coverage_stream_buffer3.cpp)
add_freertos_test(test_freertos_coverage_external_allocator4 test_freertos_coverage_external_allocator4.cpp)
add_freertos_test(test_freertos_coverage_task2 test_freertos_coverage_task2.cpp)
add_freertos_test(test_freertos_coverage_expected2 test_freertos_coverage_expected2.cpp)
add_freertos_test(test_freertos_coverage_timer2 test_freertos_coverage_timer2.cpp)
add_freertos_test(test_freertos_coverage_expected3 test_freertos_coverage_expected3.cpp)
add_freertos_test(test_freertos_coverage_branches4 test_freertos_coverage_branches4.cpp)
add_freertos_test(test_freertos_coverage_exception_safety test_freertos_coverage_exception_safety.cpp)
add_freertos_test(test_freertos_stream_buffer_callbacks test_freertos_stream_buffer_callbacks.cpp)
add_freertos_test(test_freertos_task_join test_freertos_task_join.cpp)
add_freertos_test(test_freertos_stream_batching_buffer test_freertos_stream_batching_buffer.cpp)
add_freertos_test(test_freertos_fixed_function test_freertos_fixed_function.cpp)
add_freertos_test(test_freertos_isr_context test_freertos_isr_context.cpp)
add_freertos_test(test_freertos_once_flag test_freertos_once_flag.cpp)
add_freertos_test(test_freertos_pend_call test_freertos_pend_call.cpp)
add_freertos_test(test_freertos_shared_data test_freertos_shared_data.cpp)
add_freertos_test(test_freertos_claim test_freertos_claim.cpp)
add_freertos_test(test_freertos_heap test_freertos_heap.cpp)
add_freertos_test(test_freertos_latch test_freertos_latch.cpp)
add_freertos_test(test_freertos_shared_mutex test_freertos_shared_mutex.cpp)
add_freertos_test(test_freertos_atomic test_freertos_atomic.cpp)
add_freertos_test(test_freertos_lock test_freertos_lock.cpp)
add_freertos_test(test_freertos_condition_variable test_freertos_condition_variable.cpp)
add_freertos_test(test_freertos_stream_buffer_contiguous test_freertos_stream_buffer_contiguous.cpp)
